objects/EUR_CRM_CISLink__c.object
<CustomObject>
    <description>For PR RU - Each CISLink record links a supplier to an EUR_CRM_Account. Each Supplier &gt; Account pair can have a different CISLink number</description>
    <fields>
        <fullName>EUR_CRM_CISLink_ID__c</fullName>
        <externalId>true</externalId>
        <label>CISLink ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Distributor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Distributor Account (EU)</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>CISLink - Outlets</relationshipLabel>
        <relationshipName>CISLink_Outlets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Outlet_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet Account (EU)</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>CISLink - Distributors</relationshipLabel>
        <relationshipName>CISLink_Distributor</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CISLink (EU)</label>
    <nameField>
        <displayFormat>CISLink-{0000000000}</displayFormat>
        <label>CISLink</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CISLink (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_CRM_RU_CISLink</fullName>
        <active>true</active>
        <label>EUR RU CISLink</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>